# psp_security

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  cleartext.pcap  example.cfg  psp_encrypt.cfg  psp_encrypt.json  psp_encrypt.pcap  psp_socket.md  v4_128_tunnel_encrypt.pcap  v4_cleartext.txt
cfg/: decrypt.cfg
pcap/: v4_decrypt_transport_crypt_off_128_empty.pcap  v4_decrypt_transport_no_crypt_off_128.pcap  v4_encrypt_transport_crypt_off_128.pcap  v4_encrypt_transport_crypt_off_128_empty.pcap  v4_encrypt_transport_crypt_off_128_vc.pcap  v4_encrypt_transport_crypt_off_256.pcap  v4_encrypt_transport_no_crypt_off_128.pcap  v4_encrypt_transport_no_crypt_off_128_vc.pcap  v4_encrypt_transport_no_crypt_off_256.pcap  v4_encrypt_tunnel_crypt_off_128.pcap  v4_encrypt_tunnel_crypt_off_256.pcap  v4_encrypt_tunnel_no_crypt_off_128.pcap  v4_encrypt_tunnel_no_crypt_off_256.pcap  v6_decrypt_transport_crypt_off_256.pcap  v6_decrypt_tunnel_crypt_off_256_empty.pcap  v6_encrypt_transport_crypt_off_128.pcap  v6_encrypt_transport_crypt_off_256.pcap  v6_encrypt_transport_no_crypt_off_128.pcap  v6_encrypt_transport_no_crypt_off_256.pcap  v6_encrypt_tunnel_crypt_off_128.pcap  v6_encrypt_tunnel_crypt_off_256.pcap  v6_encrypt_tunnel_crypt_off_256_empty.pcap  v6_encrypt_tunnel_crypt_off_256_vc.pcap  v6_encrypt_tunnel_no_crypt_off_128.pcap  v6_encrypt_tunnel_no_crypt_off_256.pcap  v6_encrypt_tunnel_no_crypt_off_256_vc.pcap
src/: lib.rs
src/packet/: psp.rs
test/: v4_transport_crypt_off_128.sh  v4_transport_crypt_off_128_empty.sh  v4_transport_crypt_off_128_err.sh  v4_transport_crypt_off_128_vc.sh  v4_transport_crypt_off_256.sh  v4_transport_no_crypt_off_128.sh  v4_transport_no_crypt_off_128_vc.sh  v4_transport_no_crypt_off_256.sh  v4_tunnel_crypt_off_128.sh  v4_tunnel_crypt_off_256.sh  v4_tunnel_no_crypt_off_128.sh  v4_tunnel_no_crypt_off_256.sh  v6_transport_crypt_off_128.sh  v6_transport_crypt_off_256.sh  v6_transport_no_crypt_off_128.sh  v6_transport_no_crypt_off_256.sh  v6_tunnel_crypt_off_128.sh  v6_tunnel_crypt_off_256.sh  v6_tunnel_crypt_off_256_empty.sh  v6_tunnel_crypt_off_256_err.sh  v6_tunnel_crypt_off_256_vc.sh  v6_tunnel_no_crypt_off_128.sh  v6_tunnel_no_crypt_off_256.sh  v6_tunnel_no_crypt_off_256_vc.sh
