[package]
name = "psp_security"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
aes-gcm = "0.10.3"
bincode = "1.3.3"
bitfield = "0.14.0"
clap = { version = "4.4.7", features = ["derive"] }
cmac = "0.7.2"
crypto-common = "0.1.6"
derive_builder = "0.12.0"
packet = "0.1.4"
pcap-file = "2.0.0"
pnet = "0.34.0"
pnet_packet = "0.34.0"
pnet_macros_support = "*"
pnet_macros = "*"
rand = "0.8.5"
serde = {version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.49"
anyhow = "1.0.75"
