[package]
name = "psp_security"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
description = "A Rust implementation of the PSP Security Protocol"
repository = "https://github.com/stevedoyle/psp_security"
readme = "README.md"
keywords = ["psp"]
categories = ["network-programming", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
bincode = "1.3.3"
bitfield = "0.14.0"
clap = { version = "4.4.7", features = ["derive"] }
cmac = "0.7.2"
crypto-common = "0.1.6"
derive_builder = "0.12.0"
pcap-file = "2.0.0"
pnet = "0.34.0"
pnet_packet = "0.34.0"
pnet_macros_support = "0.34.0"
pnet_macros = "0.34.0"
rand = "0.8.5"
serde = {version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.49"
anyhow = "1.0.75"
etherparse = "0.13.0"
log = "0.4.20"
env_logger = "0.10.1"
hex = "0.4.3"
exitcode = "1.1.2"
clap-num = "1.0.2"
pretty-hex = "0.4.1"
aws-lc-rs = "1.10.0"

[dev-dependencies]
test-log = "0.2.13"
